tests/baselines/reference/typeOfThisInStaticMembers11(target=es5).errors.txt
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(6,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(6,16): error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(12,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(12,16): error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(13,26): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(13,26): error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(14,22): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(14,22): error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(29,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(34,16): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(35,26): error TS2334: 'this' cannot be referenced in a static property initializer.
tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts(36,22): error TS2334: 'this' cannot be referenced in a static property initializer.


==== tests/cases/conformance/classes/members/instanceAndStaticMembers/typeOfThisInStaticMembers11.ts (12 errors) ====
    declare const foo: any;
    
    @foo
    class C {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
                   ~~~~
!!! error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
    }
    
    @foo
    class D extends C {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
                   ~~~~
!!! error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
        static e = super.a + this.c + 1;
                             ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
                             ~~~~
!!! error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
        static f = () => this.c + 1;
                         ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
                         ~~~~
!!! error TS2813: Cannot use 'this' in a static property initializer of a decorated class.
        static ff = function () { this.c + 1 }
        static foo () {
            return this.c + 1;
        }
        static get fa () {
            return this.c + 1;
        }
        static set fa (v: number) {
            this.c = v + 1;
        }
    }
    
    class CC {
        static a = 1;
        static b = this.a + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
    }
    
    class DD extends CC {
        static c = 2;
        static d = this.c + 1;
                   ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
        static e = super.a + this.c + 1;
                             ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
        static f = () => this.c + 1;
                         ~~~~
!!! error TS2334: 'this' cannot be referenced in a static property initializer.
        static ff = function () { this.c + 1 }
        static foo () {
            return this.c + 1;
        }
        static get fa () {
            return this.c + 1;
        }
        static set fa (v: number) {
            this.c = v + 1;
        }
    }
    